--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,17 @@
     "gdbots/schemas": "dev-js-compiler"
   },
   "autoload": {
-    "files": ["build/php/src/pbj-schemas.php"],
+    "files": [
+      "build/php/src/pbj-schemas.php"
+    ],
     "psr-0": {
       "": "build/php/src"
     }
   },
   "autoload-dev": {
-    "files": ["pbj-schema-stores.php"],
+    "files": [
+      "pbj-schema-stores.php"
+    ],
     "psr-0": {
       "": "build/php/tests"
     }
@@ -40,6 +44,9 @@
     "post-package-update": [
       "Gdbots\\Pbjc\\Composer\\ScriptHandler::writePbjSchemaStoresFile"
     ],
-    "test": "vendor/bin/phpunit"
+    "test": [
+      "vendor/bin/phpunit",
+      "npm test"
+    ]
   }
 }
