--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,10 @@
     }
   },
   "rules": {
+    "class-methods-use-this": "off",
+    "comma-dangle": "off",
+    "import/no-extraneous-dependencies": "off",
+    "max-len": "off",
     "jsx-a11y/img-has-alt": "off",
     "react/jsx-space-before-closing": "off"
   },
