testing es6 compiling

--- a/.babelrc
+++ b/.babelrc
@@ -22,8 +22,7 @@
               "./build/js/src"
             ],
             "alias": {
-              "@gdbots/acme-schemas": "./build/js/src",
-              "@gdbots/schemas": "./vendor/gdbots/schemas/build/js/src"
+              "@gdbots/acme-schemas": "./build/js/src"
             }
           }
         ]
@@ -52,8 +51,7 @@
               "./build/js/src"
             ],
             "alias": {
-              "@gdbots/acme-schemas": "./build/js/src",
-              "@gdbots/schemas": "./vendor/gdbots/schemas/build/js/src"
+              "@gdbots/acme-schemas": "./build/js/src"
             }
           }
         ]
