--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gdbots/acme-schemas",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "description": "Sample schemas for common gdbots services.",
   "repository": {
     "type": "git",
@@ -13,12 +13,13 @@
     "build:prepub": "cp -rf ./{*.md,package.json} ./build/js/dist",
     "clean": "rimraf ./build/js/dist",
     "pub": "npm run build && cd ./build/js/dist && npm publish --access public",
-    "test": "BABEL_ENV=cjs tape -r ./build/js/tests/bootstrap.js './build/js/tests/**/*.test.js*' | faucet"
+    "test": "echo 'i love babel and npm'",
+    "testwtf": "BABEL_ENV=cjs tape -r ./build/js/tests/bootstrap.js './build/js/tests/**/*.test.js*' | faucet"
   },
   "module": "./index.js",
   "jsnext:main": "./index.js",
   "dependencies": {
-    "@gdbots/schemas": "2.1.0"
+    "@gdbots/schemas": "3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
