--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "build:prepub": "cp -rf ./{*.md,package.json} ./build/js/dist",
     "clean": "rimraf ./build/js/dist",
     "pub": "npm run build && cd ./build/js/dist && npm publish --access public",
-    "test": "echo 'i love babel and npm'",
-    "testwtf": "BABEL_ENV=cjs tape -r ./build/js/tests/bootstrap.js './build/js/tests/**/*.test.js*' | faucet"
+    "test": "BABEL_ENV=cjs tape -r ./build/js/tests/bootstrap.js './build/js/tests/**/*.test.js*' | faucet"
   },
   "module": "./index.js",
   "jsnext:main": "./index.js",
